webhook-server/rendered/Charts/templates/kubesec/validationConfig.yaml
# Source: Charts/templates/validationConfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "app-integrity-and-misconfiguration-validation-webhhook.acme.kubesec.com"
webhooks:
  - name: "app-integrity-and-misconfiguration-validation-webhhook.acme.kubesec.com"
    #  namespaceSelector:
    #    matchLabels:
    #      admission-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1", "v1beta1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments", "pods", "services"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: kubesec
        name: app-integrity-and-misconfiguration-validation-webhhook
        path: /validate
        port: 80
      caBundle: |-
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTVENDQWpHZ0F3SUJBZ0lVQmMrbVRseEp6
[...]
        LS0K
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: NoneOnDryRun
    timeoutSeconds: 30
